[project]
name = "2f"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu==1.7.4",
    "langchain==0.0.284",
    "libmagic==1.0",
    "openai==0.28.0",
    "python-dotenv==1.0.0",
    "python-magic==0.4.27",
    "python-magic-bin==0.4.14",
    "streamlit==1.22.0",
    "tiktoken==0.4.0",
    "unstructured==0.9.2",
]
